bug_database_with_UI_iteration0/Bug_Collection/MPI/Bug24/Explanation.txt
TODO: Complete this

* Error

```
buggy_version.cpp(4): error #77: this declaration has no storage class or type specifier
      array1 = (char **) malloc(sizeArray1 * sizeof(char *));
      ^

buggy_version.cpp(4): error: identifier "sizeArray1" is undefined
      array1 = (char **) malloc(sizeArray1 * sizeof(char *));
                                ^

buggy_version.cpp(4): error: identifier "malloc" is undefined
      array1 = (char **) malloc(sizeArray1 * sizeof(char *));
                         ^

buggy_version.cpp(5): error #77: this declaration has no storage class or type specifier
      array1[0] = (char *) malloc(sizeArray1 * lineLength * sizeof(char)); 
      ^

buggy_version.cpp(5): error: variable "array1" has already been defined
      array1[0] = (char *) malloc(sizeArray1 * lineLength * sizeof(char)); 
      ^

buggy_version.cpp(5): error: identifier "lineLength" is undefined
      array1[0] = (char *) malloc(sizeArray1 * lineLength * sizeof(char)); 
                                               ^

buggy_version.cpp(5): error: a value of type "char *" cannot be used to initialize an entity of type "int [0]"
      array1[0] = (char *) malloc(sizeArray1 * lineLength * sizeof(char)); 
                  ^

buggy_version.cpp(6): error: expected a declaration
      for(i = 1; i < sizeArray1; i++)
      ^

buggy_version.cpp(29): warning #12: parsing restarts here after previous syntax error
  MPI_Bcast(array1, sizeArrray1 * lineLength, MPI_CHAR, 0, MPI_COMM_WORLD);
                                                                          ^

compilation aborted for buggy_version.cpp (code 2)
```
